python/ocp/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: otel-python-example
  labels:
    app: otel-python-example
spec:
  ports:
  - port: 35010
    targetPort: 35010
    protocol: TCP
    name: http
  selector:
    app: tme-aix-wb02  # Replace with your notebook pod label
