python/ocp/ocp-route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: otel-python-example
spec:
  port:
    targetPort: http
  to:
    kind: Service
    name: otel-python-example
